@startuml
'https://plantuml.com/class-diagram

class Inscripcion {
    + List<Materia> asignaturas,
    + Alumno alumno
    + boolean aprobada()
}

class Materia {
    + String nombre,
    + List<Materia> materiasCorrelativas,
}

class Alumno {
    + String nombre,
    + List<Materia> materiasAprobadas,
}

Alumno "1" --> "*" Inscripcion
Inscripcion "*" --> "*" Materia
Materia "*" --> "*" Materia


@enduml